--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
           <div class="hero__visual">
             <div class="portrait-stack">
               <div class="portrait-card portrait-card--a">
-                <img src="static/images/girls/a1.jpg" alt="高顏值女生 1" class="portrait" loading="lazy">
+                <img src="static/img/a1.jpg" alt="高顏值女生 1" class="portrait" loading="lazy">
                 <div class="portrait-label" aria-hidden="true">섹시하다</div>
               </div>
               <div class="portrait-card portrait-card--b">
-                <img src="static/images/girls/a2.jpg" alt="高顏值女生 2" class="portrait" loading="lazy">
+                <img src="static/img/a2.jpg" alt="高顏值女生 2" class="portrait" loading="lazy">
                 <div class="portrait-label" aria-hidden="true">성숙한 여성</div>
               </div>
               <div class="portrait-card portrait-card--c">
-                <img src="static/images/girls/a3.jpg" alt="高顏值女生 3" class="portrait" loading="lazy">
+                <img src="static/img/a3.jpg" alt="高顏值女生 3" class="portrait" loading="lazy">
                 <div class="portrait-label" aria-hidden="true">귀여운 스타일</div>
               </div>
             </div>
@@ -143,12 +143,12 @@
           <p class="section-sub">👉 화면을 왼쪽이나 오른쪽으로 스와이프하여 더 많은 콘텐츠를 보는 기능을 사용해 본 사람들은 그것이 훌륭한 경험이라고 말합니다.</p>
         </div>
         <div class="gallery__slider" id="gallerySlider">
-          <figure class="gallery-card"><img src="static/images/girls/a4.jpg" alt="女生照片 4" loading="lazy"><figcaption class="gallery-caption">부드러운 분위기</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a5.jpg" alt="女生照片 5" loading="lazy"><figcaption class="gallery-caption">청순한 이미지</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a6.jpg" alt="女生照片 6" loading="lazy"><figcaption class="gallery-caption">시크한 매력</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a7.jpg" alt="女生照片 7" loading="lazy"><figcaption class="gallery-caption">카리스마 있는 연상녀</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a8.jpg" alt="女生照片 8" loading="lazy"><figcaption class="gallery-caption">요염한 분위기</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a9.jpg" alt="女生照片 9" loading="lazy"><figcaption class="gallery-caption">유부녀</figcaption></figure>
+          <figure class="gallery-card"><img src="static/img/a4.jpg" alt="女生照片 4" loading="lazy"><figcaption class="gallery-caption">부드러운 분위기</figcaption></figure>
+          <figure class="gallery-card"><img src="static/img/a5.jpg" alt="女生照片 5" loading="lazy"><figcaption class="gallery-caption">청순한 이미지</figcaption></figure>
+          <figure class="gallery-card"><img src="static/img/a6.jpg" alt="女生照片 6" loading="lazy"><figcaption class="gallery-caption">시크한 매력</figcaption></figure>
+          <figure class="gallery-card"><img src="static/img/a7.jpg" alt="女生照片 7" loading="lazy"><figcaption class="gallery-caption">카리스마 있는 연상녀</figcaption></figure>
+          <figure class="gallery-card"><img src="static/img/a8.jpg" alt="女生照片 8" loading="lazy"><figcaption class="gallery-caption">요염한 분위기</figcaption></figure>
+          <figure class="gallery-card"><img src="static/img/a9.jpg" alt="女生照片 9" loading="lazy"><figcaption class="gallery-caption">유부녀</figcaption></figure>
         </div>
       </section>
 
@@ -217,4 +217,5 @@
 
   <script src="static/js/script.js"></script>
 </body>
+
 </html>
