--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
             class="btn btn--primary btn--xl btn--pulse"
             onclick="addLine()"
           >
-            <img src="static/images/line.png" alt="LINE" class="btn-icon">라인을 추가하여 바로 원나잇 가능
+            <img src="static/img/line.png" alt="LINE" class="btn-icon">라인을 추가하여 바로 원나잇 가능
           </button>
           <button
             id="btnTg2"
             class="btn btn--tg btn--xl btn--pulse"
             onclick="addTg()"
           >
-            <img src="static/images/tg.png" alt="TG" class="btn-icon">텔레그램을 추가하여 바로 원나잇 가능
+            <img src="static/img/tg.png" alt="TG" class="btn-icon">텔레그램을 추가하여 바로 원나잇 가능
           </button>
           <p class="hint">알림: 양측이 동의한 성인 데이트에 한하며 서로를 존중하고 비밀을 보장해야 합니다</p>
         </div>
@@ -219,3 +219,4 @@
 </body>
 
 </html>
+
