--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         </a>
         <div class="header__buttons">
           <a id="headerLineCta" class="btn btn--line" href="#"  onclick="addLine()">
-            <img src="static/images/line.png" alt="LINE" class="btn-icon">
+            <img src="static/img/line.png" alt="LINE" class="btn-icon">
             <span class="btn-text">원나잇을 원한다면  바로 LINE 으로 연락 주세요</span>
           </a>
           <a id="headerTgCta" class="btn btn--tg" href="#" onclick="addTg()">
-            <img src="static/images/tg.png" alt="TG" class="btn-icon">
+            <img src="static/img/tg.png" alt="TG" class="btn-icon">
             <span class="btn-text">텔레그램을 추가하여 바로 원나잇 가능</span>
           </a>
         </div>
@@ -104,14 +104,14 @@
                   class="btn btn--primary btn--xl"
                   onclick="addLine()"
                 >
-                  <img src="static/images/line.png" alt="LINE" class="btn-icon">라인을 추가하여 바로 원나잇 가능
+                  <img src="static/img/line.png" alt="LINE" class="btn-icon">라인을 추가하여 바로 원나잇 가능
                 </button>
                 <button
                   id="btnTg"
                   class="btn btn--tg btn--xl"
                   onclick="addTg()"
                 >
-                  <img src="static/images/tg.png" alt="TG" class="btn-icon">텔레그램을 추가하여 바로 원나잇 가능
+                  <img src="static/img/tg.png" alt="TG" class="btn-icon">텔레그램을 추가하여 바로 원나잇 가능
                 </button>
               </div>
               <p class="hint">원하는 취향을 고르면 자동으로 매칭해드리니 오늘 밤 약속만 잡으시면 됩니다</p>
@@ -219,4 +219,5 @@
 </body>
 
 </html>
+
 
