--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <section class="hero">
         <div class="container hero__grid">
           <div class="hero__copy">
-            <h1>글래머러스 그녀와의 심야 섹스</h1>
-            <p class="subtitle">오늘 밤 |실제 육체 |할수록 짜릿하고 부르면 달려옵니다</p>
+            <h1>글래머러스 그녀와 심야 섹스</h1>
+            <p class="subtitle">오늘 밤 할수록 짜릿하고 부르면 달려옵니다</p>
             <ul class="hero__badges">
               <li>20+ 성인 원나잇</li>
               <li>실제 만남</li>
@@ -219,5 +219,6 @@
 </body>
 
 </html>
+
 
 
