Replace encoded HTML with actual HTML tags

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     <div class="hero-main">
       <!-- 左：头像 -->
       <div class="hero-photo">
-        <img src="img/profile.png" alt="おざき くにあき ">
-        <p class="hero-name">おざき くにあき </p>
+        <img src="img/profile.png" alt="尾崎 邦明 ">
+        <p class="hero-name">尾崎 邦明 </p>
       </div>
 
       <!-- 右：主文案 -->
@@ -265,8 +265,8 @@
     </div>
 
     <div class="profile-photo">
-      <img src="img/profile2.png" alt="おざき くにあき ">
-      <p class="profile-name">おざき くにあき </p>
+      <img src="img/profile2.png" alt="尾崎 邦明">
+      <p class="profile-name">尾崎 邦明 </p>
       <p class="profile-title">
         りそなアセットマネジメント<br>
         チーフストラテジスト
@@ -303,5 +303,6 @@
 </body>
 
 </html>
+
 
 
